dist/1.0/bin/sample/retrieveUnpackaged/objects/Commissions_Quota__c.object
<CustomObject>
    <description>Obiect for Commission Tab</description>
    <fields>
        <fullName>Edited__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag is check, if object at least one time was edit.</description>
        <inlineHelpText>Flag is check, if object at least one time was edit.</inlineHelpText>
        <label>Edited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <description>Start date for Period</description>
        <inlineHelpText>Start date for Period</inlineHelpText>
        <label>From Date</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Month__c</fullName>
        <description>First month for period of quota</description>
        <inlineHelpText>First month for period of quota</inlineHelpText>
        <label>From Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>From_Year__c</fullName>
        <description>Year of first month from period</description>
        <inlineHelpText>Year of first month from period</inlineHelpText>
        <label>From Year</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <label>Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <description>Period of Commissions Quota</description>
        <inlineHelpText>Period for salesman to realised Quota</inlineHelpText>
        <label>Period</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quota_Attainment__c</fullName>
        <description>Value of Quota attainment for datetime equals &quot;Quota Attainment counting time&quot;</description>
        <inlineHelpText>Value of Quota attainment for datetime equals &quot;Quota Attainment counting time&quot;</inlineHelpText>
        <label>Quota Attainment</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quota_Attainment_counting_time__c</fullName>
        <description>Time of last counting Quota attainment</description>
        <inlineHelpText>Time of last counting Quota attainment</inlineHelpText>
        <label>Quota Attainment counting time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Quota__c</fullName>
        <description>Value of quota, which salesman have to attain in indicated period</description>
        <inlineHelpText>In this field is value of quota, which salesman have to attain in indicated period</inlineHelpText>
        <label>Quota</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salesman__c</fullName>
        <description>Salesman for this Commissions Quota</description>
        <inlineHelpText>Salesman for this Commissions Quota</inlineHelpText>
        <label>Salesman</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commissions_Quotas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Stage of Commissions Quota</description>
        <inlineHelpText>Stage of Commissions Quota</inlineHelpText>
        <label>Stage</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <description>Last day of Period</description>
        <inlineHelpText>Last day of Period</inlineHelpText>
        <label>To Date</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Month__c</fullName>
        <description>Last month for period of quota</description>
        <inlineHelpText>Last month for period of quota</inlineHelpText>
        <label>To Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>To_Year__c</fullName>
        <description>Year of last month from period</description>
        <inlineHelpText>Year of last month from period</inlineHelpText>
        <label>To Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Commissions Quota</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CQ</fullName>
        <columns>NAME</columns>
        <columns>Salesman__c</columns>
        <columns>Stage__c</columns>
        <columns>Period__c</columns>
        <columns>Quota__c</columns>
        <columns>Quota_Attainment__c</columns>
        <columns>Quota_Attainment_counting_time__c</columns>
        <columns>Percent__c</columns>
        <columns>Edited__c</columns>
        <filterScope>Everything</filterScope>
        <label>CQ</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commissions Quotas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>From_Month_can_not_be_blank</fullName>
        <active>true</active>
        <description>From Month field can not be blank</description>
        <errorConditionFormula>ISPICKVAL(From_Month__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>From_Month__c</errorDisplayField>
        <errorMessage>From Month field can not be blank</errorMessage>
    </validationRules>
</CustomObject>